parser/bashGrammarParser.java
<<<<<<< HEAD
<<<<<<< HEAD
// Generated from bashGrammar.g4 by ANTLR 4.8
=======
// Generated from bashGrammar.g4 by ANTLR 4.9
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
// Generated from bashGrammar.g4 by ANTLR 4.9
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bashGrammarParser extends Parser {
<<<<<<< HEAD
<<<<<<< HEAD
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }
=======
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
<<<<<<< HEAD
<<<<<<< HEAD
		T__0=1, SINGLE_STRING=2, DOUBLE_STRING=3, COMMENT=4, SPACE=5, IF=6, THEN=7, 
		ELIF=8, ELSE=9, FI=10, FOR=11, DO=12, DONE=13, SED=14, COMMAND=15, RHS_ASSIGNMENT=16, 
		OPEN_BRACKETS=17, CLOSE_BRACKETS=18, VAR=19, WEBSITE=20, FILENAME=21, 
		SED_FLAG=22, BASH_VAR=23, VAL=24, ASSIGN=25, SEMICOLON=26, LOGICAL_OP=27, 
		INCREMENT=28, COMPARE=29, BLOB=30, OTHER=31;
	public static final int
		RULE_code = 0, RULE_bashScript = 1, RULE_expressions = 2, RULE_for_loop = 3, 
		RULE_inside_for = 4, RULE_ifElse = 5, RULE_condition = 6, RULE_linux_command = 7, 
		RULE_assignment = 8, RULE_advanced_assignment = 9, RULE_command_data = 10, 
		RULE_comparison = 11, RULE_increment = 12, RULE_space = 13, RULE_string = 14, 
		RULE_sed_flag = 15, RULE_sed = 16;
=======
=======
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
		T__0=1, OPEN_PAR=2, CLOSE_PAR=3, OPEN_CUR=4, CLOSE_CUR=5, OPEN_BOX=6, 
		CLOSE_BOX=7, RHS_ASSIGNMENT=8, SINGLE_STRING=9, DOUBLE_STRING=10, COMMENT=11, 
		SPACE=12, FUNCTION=13, IF=14, THEN=15, ELIF=16, ELSE=17, FI=18, FOR=19, 
		WHILE=20, DO=21, SED=22, SED_FLAG=23, BREAK=24, CONTINUE=25, DONE=26, 
		COMMAND=27, VAR=28, WEBSITE=29, FILENAME=30, BASH_VAR=31, VAL=32, ASSIGN=33, 
		SEMICOLON=34, LOGICAL_OP=35, INCREMENT=36, COMPARE=37, BLOB=38, OTHER=39;
	public static final int
		RULE_code = 0, RULE_bashScript = 1, RULE_expressions = 2, RULE_loops = 3, 
		RULE_while_loop = 4, RULE_for_loop = 5, RULE_inside_for = 6, RULE_ifElse = 7, 
		RULE_function_def = 8, RULE_function_call = 9, RULE_multi_conditions = 10, 
		RULE_condition = 11, RULE_linux_command = 12, RULE_assignment = 13, RULE_advanced_assignment = 14, 
		RULE_command_data = 15, RULE_comparison = 16, RULE_increment = 17, RULE_open_bracket = 18, 
<<<<<<< HEAD
		RULE_close_bracket = 19, RULE_space = 20, RULE_string = 21;
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
		RULE_close_bracket = 19, RULE_sed_flag = 20, RULE_sed = 21, RULE_space = 22, 
		RULE_string = 23;
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "bashScript", "expressions", "loops", "while_loop", "for_loop", 
			"inside_for", "ifElse", "function_def", "function_call", "multi_conditions", 
			"condition", "linux_command", "assignment", "advanced_assignment", "command_data", 
<<<<<<< HEAD
<<<<<<< HEAD
			"comparison", "increment", "space", "string", "sed_flag", "sed"
=======
			"comparison", "increment", "open_bracket", "close_bracket", "space", 
			"string"
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			"comparison", "increment", "open_bracket", "close_bracket", "sed_flag", 
			"sed", "space", "string"
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
<<<<<<< HEAD
<<<<<<< HEAD
			null, "','", null, null, null, null, "'if'", "'then'", "'elif'", "'else'", 
			"'fi'", "'for'", "'do'", "'done'", "'sed'", null, null, null, null, null, 
			null, null, null, null, null, "'='", "';'"
=======
			null, "','", "'('", "')'", "'{'", "'}'", "'['", "']'", null, null, null, 
			null, null, "'function'", "'if'", "'then'", "'elif'", "'else'", "'fi'", 
			"'for'", "'while'", "'do'", "'break'", "'continue'", "'done'", null, 
			null, null, null, "'='", "';'"
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			null, "','", "'('", "')'", "'{'", "'}'", "'['", "']'", null, null, null, 
			null, null, "'function'", "'if'", "'then'", "'elif'", "'else'", "'fi'", 
			"'for'", "'while'", "'do'", "'sed'", null, "'break'", "'continue'", "'done'", 
			null, null, null, null, null, null, "'='", "';'"
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
<<<<<<< HEAD
<<<<<<< HEAD
			null, null, "SINGLE_STRING", "DOUBLE_STRING", "COMMENT", "SPACE", "IF", 
			"THEN", "ELIF", "ELSE", "FI", "FOR", "DO", "DONE", "SED", "COMMAND", 
			"RHS_ASSIGNMENT", "OPEN_BRACKETS", "CLOSE_BRACKETS", "VAR", "WEBSITE", 
			"FILENAME", "SED_FLAG", "BASH_VAR", "VAL", "ASSIGN", "SEMICOLON", "LOGICAL_OP", 
			"INCREMENT", "COMPARE", "BLOB", "OTHER"
=======
			null, null, "OPEN_PAR", "CLOSE_PAR", "OPEN_CUR", "CLOSE_CUR", "OPEN_BOX", 
			"CLOSE_BOX", "RHS_ASSIGNMENT", "SINGLE_STRING", "DOUBLE_STRING", "COMMENT", 
			"SPACE", "FUNCTION", "IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "WHILE", 
			"DO", "BREAK", "CONTINUE", "DONE", "COMMAND", "VAR", "BASH_VAR", "VAL", 
			"ASSIGN", "SEMICOLON", "LOGICAL_OP", "INCREMENT", "COMPARE", "BLOB", 
			"OTHER"
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			null, null, "OPEN_PAR", "CLOSE_PAR", "OPEN_CUR", "CLOSE_CUR", "OPEN_BOX", 
			"CLOSE_BOX", "RHS_ASSIGNMENT", "SINGLE_STRING", "DOUBLE_STRING", "COMMENT", 
			"SPACE", "FUNCTION", "IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "WHILE", 
			"DO", "SED", "SED_FLAG", "BREAK", "CONTINUE", "DONE", "COMMAND", "VAR", 
			"WEBSITE", "FILENAME", "BASH_VAR", "VAL", "ASSIGN", "SEMICOLON", "LOGICAL_OP", 
			"INCREMENT", "COMPARE", "BLOB", "OTHER"
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bashGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bashGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodeContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(bashGrammarParser.EOF, 0); }
		public List<BashScriptContext> bashScript() {
			return getRuleContexts(BashScriptContext.class);
		}
		public BashScriptContext bashScript(int i) {
			return getRuleContext(BashScriptContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).exitCode(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
<<<<<<< HEAD
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SPACE) | (1L << IF) | (1L << FOR) | (1L << SED) | (1L << COMMAND) | (1L << OPEN_BRACKETS) | (1L << VAR))) != 0)) {
				{
				{
				setState(34);
				bashScript();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
=======
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAR) | (1L << OPEN_CUR) | (1L << OPEN_BOX) | (1L << SPACE) | (1L << FUNCTION) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << COMMAND) | (1L << VAR))) != 0)) {
				{
				{
				setState(44);
				bashScript();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAR) | (1L << OPEN_CUR) | (1L << OPEN_BOX) | (1L << SPACE) | (1L << FUNCTION) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SED) | (1L << COMMAND) | (1L << VAR))) != 0)) {
				{
				{
				setState(48);
				bashScript();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BashScriptContext extends ParserRuleContext {
		public List<Function_callContext> function_call() {
			return getRuleContexts(Function_callContext.class);
		}
		public Function_callContext function_call(int i) {
			return getRuleContext(Function_callContext.class,i);
		}
		public List<Function_defContext> function_def() {
			return getRuleContexts(Function_defContext.class);
		}
		public Function_defContext function_def(int i) {
			return getRuleContext(Function_defContext.class,i);
		}
		public List<LoopsContext> loops() {
			return getRuleContexts(LoopsContext.class);
		}
		public LoopsContext loops(int i) {
			return getRuleContext(LoopsContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<Linux_commandContext> linux_command() {
			return getRuleContexts(Linux_commandContext.class);
		}
		public Linux_commandContext linux_command(int i) {
			return getRuleContext(Linux_commandContext.class,i);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public List<Advanced_assignmentContext> advanced_assignment() {
			return getRuleContexts(Advanced_assignmentContext.class);
		}
		public Advanced_assignmentContext advanced_assignment(int i) {
			return getRuleContext(Advanced_assignmentContext.class,i);
		}
		public List<IfElseContext> ifElse() {
			return getRuleContexts(IfElseContext.class);
		}
		public IfElseContext ifElse(int i) {
			return getRuleContext(IfElseContext.class,i);
		}
		public List<SedContext> sed() {
			return getRuleContexts(SedContext.class);
		}
		public SedContext sed(int i) {
			return getRuleContext(SedContext.class,i);
		}
		public BashScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bashScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).enterBashScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).exitBashScript(this);
		}
	}

	public final BashScriptContext bashScript() throws RecognitionException {
		BashScriptContext _localctx = new BashScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bashScript);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
<<<<<<< HEAD
			setState(49); 
=======
			setState(60); 
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			setState(65); 
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(49);
=======
					setState(60);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(65);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(42);
						for_loop();
=======
						setState(52);
						function_call();
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
						setState(56);
						function_call();
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						}
						break;
					case 2:
						{
						setState(57);
						function_def();
						}
						break;
					case 3:
						{
						setState(58);
						loops();
						}
						break;
					case 4:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(43);
=======
						setState(55);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
						setState(59);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						assignment();
						}
						break;
					case 5:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(44);
=======
						setState(56);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
						setState(60);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						linux_command();
						}
						break;
					case 6:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(45);
=======
						setState(57);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
						setState(61);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						space();
						}
						break;
					case 7:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(46);
=======
						setState(58);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
						setState(62);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						advanced_assignment();
						}
						break;
					case 8:
						{
<<<<<<< HEAD
<<<<<<< HEAD
						setState(47);
						ifElse();
						}
						break;
					case SED:
=======
						setState(63);
						ifElse();
						}
						break;
					case 9:
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
						{
						setState(64);
						sed();
						}
						break;
<<<<<<< HEAD
					default:
						throw new NoViableAltException(this);
=======
						setState(59);
						ifElse();
						}
						break;
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
<<<<<<< HEAD
<<<<<<< HEAD
				setState(51); 
=======
				setState(62); 
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
				setState(67); 
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<Function_callContext> function_call() {
			return getRuleContexts(Function_callContext.class);
		}
		public Function_callContext function_call(int i) {
			return getRuleContext(Function_callContext.class,i);
		}
		public List<Function_defContext> function_def() {
			return getRuleContexts(Function_defContext.class);
		}
		public Function_defContext function_def(int i) {
			return getRuleContext(Function_defContext.class,i);
		}
		public List<LoopsContext> loops() {
			return getRuleContexts(LoopsContext.class);
		}
		public LoopsContext loops(int i) {
			return getRuleContext(LoopsContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<Linux_commandContext> linux_command() {
			return getRuleContexts(Linux_commandContext.class);
		}
		public Linux_commandContext linux_command(int i) {
			return getRuleContext(Linux_commandContext.class,i);
		}
		public List<Advanced_assignmentContext> advanced_assignment() {
			return getRuleContexts(Advanced_assignmentContext.class);
		}
		public Advanced_assignmentContext advanced_assignment(int i) {
			return getRuleContext(Advanced_assignmentContext.class,i);
		}
		public List<IfElseContext> ifElse() {
			return getRuleContexts(IfElseContext.class);
		}
		public IfElseContext ifElse(int i) {
			return getRuleContext(IfElseContext.class,i);
		}
		public List<SedContext> sed() {
			return getRuleContexts(SedContext.class);
		}
		public SedContext sed(int i) {
			return getRuleContext(SedContext.class,i);
		}
		public List<TerminalNode> BREAK() { return getTokens(bashGrammarParser.BREAK); }
		public TerminalNode BREAK(int i) {
			return getToken(bashGrammarParser.BREAK, i);
		}
		public List<TerminalNode> CONTINUE() { return getTokens(bashGrammarParser.CONTINUE); }
		public TerminalNode CONTINUE(int i) {
			return getToken(bashGrammarParser.CONTINUE, i);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).exitExpressions(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
<<<<<<< HEAD
<<<<<<< HEAD
			setState(60);
=======
			setState(81);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
			setState(87);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAR) | (1L << OPEN_CUR) | (1L << OPEN_BOX) | (1L << FUNCTION) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << SED) | (1L << BREAK) | (1L << CONTINUE) | (1L << COMMAND) | (1L << VAR))) != 0)) {
				{
<<<<<<< HEAD
<<<<<<< HEAD
				setState(58);
=======
				setState(79);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
				setState(85);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(53);
					for_loop();
=======
					setState(64);
					function_call();
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(69);
					function_call();
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					}
					break;
				case 2:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(54);
=======
					setState(65);
=======
					setState(70);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					function_def();
					}
					break;
				case 3:
					{
					setState(71);
					loops();
					}
					break;
				case 4:
					{
<<<<<<< HEAD
					setState(67);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(72);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					assignment();
					}
					break;
				case 5:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(55);
=======
					setState(68);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(73);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					linux_command();
					}
					break;
				case 6:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(56);
=======
					setState(69);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(74);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					advanced_assignment();
					}
					break;
				case 7:
					{
<<<<<<< HEAD
<<<<<<< HEAD
					setState(57);
=======
					setState(70);
>>>>>>> 5074812a9eef5190831be8e6581aa425ab10d9ec
=======
					setState(75);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
					ifElse();
					}
					break;
				case 8:
					{
					setState(76);
					sed();
					}
					break;
				case 9:
					{
					setState(77);
					match(BREAK);
					setState(79);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(78);
						space();
						}
						break;
					}
					}
					break;
				case 10:
					{
					setState(81);
					match(CONTINUE);
					setState(83);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(82);
						space();
						}
						break;
					}
					}
					break;
				}
				}
<<<<<<< HEAD
<<<<<<< HEAD
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
=======
				setState(83);
=======
				setState(89);
>>>>>>> 41a7ec9370f04bec966c2fff4f970a248b041ee0
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(90);
				space();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopsContext extends ParserRuleContext {
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public LoopsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).enterLoops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bashGrammarListener ) ((bashGrammarListener)listener).exitLoops(this);
		}
	}
